[SG-1223]: Fix form page spacing on small screens.

--- a/web/themes/custom/sfgovpl/src/sass/forms/_formio-feedback.scss
+++ b/web/themes/custom/sfgovpl/src/sass/forms/_formio-feedback.scss
@@ -136,6 +136,10 @@
     flex: 1 0 100%;
     margin-top: 20px;
 
+    .page-node-type-form-page & {
+      margin-top: 0;
+    }
+
      @media (min-width: 740px) {
       flex: 0 0 auto;
       justify-content: flex-end;
